# frame-factor

./: Cargo.toml  run.bat
assets/: input.inp
assets/frames/: katana_one.fme
assets/frames/bow_man/: frame.ffdsme  frame.fme
assets/frames/katana_one/: frame.fme  idle.anim  katana slash 1-2-3.atk  slash.anim  slash1.atk  slash2.atk  slash3.atk  slash_hit.anim  stepback.atk  walk.anim
assets/misc/: health_bar.pb
assets/shaders/: animator.frag  animator.vert  progress_bar.frag  progress_bar.vert
src/: angle.rs  animation.rs  attack.rs  camera.rs  client.rs  collider.rs  frame.rs  game_settings.rs  game_state.rs  input.rs  main.rs  player.rs  progress_bar.rs  server.rs  transform.rs  world_transform.rs
src/helper/: collision.rs  loading.rs  mod.rs
src/networking/: mod.rs  network_event.rs  network_payload.rs  network_resource.rs  network_spawn.rs
