[package]
name = "frame-factor"
version = "0.1.0"
authors = ["= <hjalte.nannestad@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.39"
bevy = { version = "0.5.0", features = ["serialize"] }
bincode = "1.3.2"
clap = "3.0.0-beta.2"
bevy_rapier2d = "0.9.0"
itertools = "0.10.0"
ron = "0.6.4"
serde = { version = "1.0.125", features = ["derive"] }
